k8s/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocpawssecret
  generation: 1
  labels:
    app: ocpawssecret    
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10 
  selector:
    matchLabels:
      app: ocpawssecret           
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: ocpawssecret
        deployment: ocpawssecret          
    spec:
      # ensure the scheduler distributes replicas evenly on the worker nodes
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                      - ocpawssecret
                topologyKey: "kubernetes.io/hostname"
      containers:     
      - envFrom:
          - configMapRef:
              name: config-env-ocpawssecret
        image: vanessaruiz/ocp-aws-secret:1.1
        imagePullPolicy: Always
        securityContext:
          privileged: false
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - all
            add: ["NET_ADMIN", "SYS_TIME"]
        name: ocpawssecret
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 1
            memory: 1Gi
          requests:
            cpu: 0.5
            memory: 0.5Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: ocpawssecret-persistent-storage
          mountPath: "/usr/application/"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroupChangePolicy: "OnRootMismatch"
      terminationGracePeriodSeconds: 30
      volumes:        
        - name: ocpawssecret-persistent-storage
          persistentVolumeClaim:
            claimName: ocpawssecret-pvc
