k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocpawssecret-svc
  labels:
    app: ocpawssecret
spec:
  selector:
    app: ocpawssecret
  type: ClusterIP
  ports:
  - port: 5432
